force-app/main/messaging/objects/Notification_Target__mdt/Notification_Target__mdt.object-meta.xml
<CustomObject>
    <label>Notification Target</label>
    <pluralLabel>Notification Targets</pluralLabel>
</CustomObject>