force-app/main/messaging/objects/Notification_Target__mdt/fields/Email_Template_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Delegate__c</fullName>
    <label>Email Template Delegate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>