force-app/main/messaging/objects/Notification_Target__mdt/fields/Is_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Is_Redirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Redirect</label>
    <type>Checkbox</type>
</CustomField>