force-app/main/messaging/objects/Notification_Target__mdt/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <label>Message Body</label>
    <type>TextArea</type>
</CustomField>