force-app/main/messaging/objects/Notification_Target__mdt/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <referenceTo>Notification_Type__mdt</referenceTo>
    <relationshipLabel>Notification Targets</relationshipLabel>
    <relationshipName>Notification_Targets</relationshipName>
    <type>MetadataRelationship</type>

</CustomField>