force-app/main/messaging/objects/Notification_Target__mdt/fields/Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email_Address__c</fullName>
    <label>Org Wide Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>