force-app/main/messaging/objects/Notification_Target__mdt/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>

</CustomField>