force-app/main/messaging/objects/Notification_Target__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Custom label name or text of title. Now Used only for Push targets. Use label name here in most cases!</description>
    <inlineHelpText>Custom label name or text of title. Now Used only for Push targets. Use label name here in most cases!</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>